--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -968,6 +968,110 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
+  - name: pull-knative-serving-ambassador-latest
+    agent: kubernetes
+    context: pull-knative-serving-ambassador-latest
+    always_run: false
+    rerun_command: "/test pull-knative-serving-ambassador-latest"
+    trigger: "(?m)^/test (all|pull-knative-serving-ambassador-latest),?(\\s+|$)"
+    decorate: true
+    optional: true
+    branches:
+      - "release-0.7"
+    spec:
+      containers:
+        - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+          imagePullPolicy: Always
+          command:
+            - runner.sh
+          args:
+            - "./test/presubmit-tests.sh"
+            - "--run-test"
+            - "./test/e2e-tests.sh --ambassador-version 0.86.1"
+          volumeMounts:
+            - name: test-account
+              mountPath: /etc/test-account
+              readOnly: true
+          env:
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /etc/test-account/service-account.json
+            - name: E2E_CLUSTER_REGION
+              value: us-central1
+      volumes:
+        - name: test-account
+          secret:
+            secretName: test-account
+  - name: pull-knative-serving-ambassador-latest
+    agent: kubernetes
+    context: pull-knative-serving-ambassador-latest
+    always_run: false
+    rerun_command: "/test pull-knative-serving-ambassador-latest"
+    trigger: "(?m)^/test (all|pull-knative-serving-ambassador-latest),?(\\s+|$)"
+    decorate: true
+    optional: true
+    path_alias: knative.dev/serving
+    branches:
+      - "release-0.8"
+      - "release-0.9"
+    spec:
+      containers:
+        - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+          imagePullPolicy: Always
+          command:
+            - runner.sh
+          args:
+            - "./test/presubmit-tests.sh"
+            - "--run-test"
+            - "./test/e2e-tests.sh --ambassador-version 0.86.1"
+          volumeMounts:
+            - name: test-account
+              mountPath: /etc/test-account
+              readOnly: true
+          env:
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /etc/test-account/service-account.json
+            - name: E2E_CLUSTER_REGION
+              value: us-central1
+      volumes:
+        - name: test-account
+          secret:
+            secretName: test-account
+  - name: pull-knative-serving-ambassador-latest
+    agent: kubernetes
+    context: pull-knative-serving-ambassador-latest
+    always_run: false
+    rerun_command: "/test pull-knative-serving-ambassador-latest"
+    trigger: "(?m)^/test (all|pull-knative-serving-ambassador-latest),?(\\s+|$)"
+    decorate: true
+    optional: true
+    path_alias: knative.dev/serving
+    skip_branches:
+      - "release-0.7"
+      - "release-0.8"
+      - "release-0.9"
+    spec:
+      containers:
+        - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+          imagePullPolicy: Always
+          command:
+            - runner.sh
+          args:
+            - "./test/presubmit-tests.sh"
+            - "--run-test"
+            - "./test/e2e-tests.sh --ambassador-version 0.86.1"
+          volumeMounts:
+            - name: test-account
+              mountPath: /etc/test-account
+              readOnly: true
+          env:
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /etc/test-account/service-account.json
+            - name: E2E_CLUSTER_REGION
+              value: us-central1
+      volumes:
+        - name: test-account
+          secret:
+            secretName: test-account
   - name: pull-knative-serving-kourier-stable
     agent: kubernetes
     context: pull-knative-serving-kourier-stable
@@ -5854,6 +5958,38 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
+- cron: "31 */2 * * *"
+  name: ci-knative-serving-ambassador-latest
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+    - org: knative
+      repo: serving
+      base_ref: master
+      path_alias: knative.dev/serving
+  spec:
+    containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+          - runner.sh
+        args:
+          - "./test/e2e-tests.sh"
+          - "--ambassador-version"
+          - "0.86.1"
+        volumeMounts:
+          - name: test-account
+            mountPath: /etc/test-account
+            readOnly: true
+        env:
+          - name: GOOGLE_APPLICATION_CREDENTIALS
+            value: /etc/test-account/service-account.json
+          - name: E2E_CLUSTER_REGION
+            value: us-central1
+    volumes:
+      - name: test-account
+        secret:
+          secretName: test-account
 - cron: "56 9 * * *"
   name: ci-knative-serving-nightly-release
   agent: kubernetes
