--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -232,12 +232,6 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-go-coverage
   num_failures_to_alert: 9999
   short_text_metric: "coverage"
-- name: ci-knative-serving-0.7-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-serving-0.7-continuous
-- name: ci-knative-eventing-0.7-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.7-continuous
-- name: ci-knative-eventing-contrib-0.7-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.7-continuous
 - name: ci-knative-serving-0.8-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.8-continuous
 - name: ci-knative-eventing-0.8-continuous
@@ -256,6 +250,18 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.10-continuous
 - name: ci-knative-eventing-contrib-0.10-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.10-continuous
+- name: ci-knative-serving-0.11-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.11-continuous
+- name: ci-knative-client-0.11-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.11-continuous
+- name: ci-knative-eventing-0.11-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.11-continuous
+- name: ci-knative-eventing-contrib-0.11-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.11-continuous
+- name: ci-knative-serving-operator-0.11-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.11-continuous
+- name: ci-knative-eventing-operator-0.11-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.11-continuous
 - name: ci-google-knative-gcp-continuous
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-continuous
   alert_stale_results_hours: 3
@@ -469,17 +475,6 @@ dashboards:
   - name: coverage
     test_group_name: pull-google-knative-gcp-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
-- name: knative-0.7
-  dashboard_tab:
-  - name: serving
-    test_group_name: ci-knative-serving-0.7-continuous
-    base_options: "sort-by-name="
-  - name: eventing
-    test_group_name: ci-knative-eventing-0.7-continuous
-    base_options: "sort-by-name="
-  - name: eventing-contrib
-    test_group_name: ci-knative-eventing-contrib-0.7-continuous
-    base_options: "sort-by-name="
 - name: knative-0.8
   dashboard_tab:
   - name: serving
@@ -512,6 +507,26 @@ dashboards:
     base_options: "sort-by-name="
   - name: eventing-contrib
     test_group_name: ci-knative-eventing-contrib-0.10-continuous
+    base_options: "sort-by-name="
+- name: knative-0.11
+  dashboard_tab:
+  - name: serving
+    test_group_name: ci-knative-serving-0.11-continuous
+    base_options: "sort-by-name="
+  - name: client
+    test_group_name: ci-knative-client-0.11-continuous
+    base_options: "sort-by-name="
+  - name: eventing
+    test_group_name: ci-knative-eventing-0.11-continuous
+    base_options: "sort-by-name="
+  - name: eventing-contrib
+    test_group_name: ci-knative-eventing-contrib-0.11-continuous
+    base_options: "sort-by-name="
+  - name: serving-operator
+    test_group_name: ci-knative-serving-operator-0.11-continuous
+    base_options: "sort-by-name="
+  - name: eventing-operator
+    test_group_name: ci-knative-eventing-operator-0.11-continuous
     base_options: "sort-by-name="
 dashboard_groups:
 - name: knative
