--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -25,6 +25,17 @@ presubmits:
           memory: 12Gi # Real request for this pod is 16 as sidecar requests 4
         limits:
           memory: 16Gi
+    - build-tests-go114: true
+      dot-dev: true
+      optional: true
+      go114: true
+      resources:
+        requests:
+          memory: 12Gi # Real request for this pod is 16 as sidecar requests 4
+        limits:
+          memory: 16Gi
+      args:
+      - "--build-tests"
     - unit-tests: true
       dot-dev: true
     - integration-tests: true
@@ -32,6 +43,13 @@ presubmits:
       args:
       - "--run-test"
       - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
+    - integration-tests-go114: true
+      dot-dev: true
+      optional: true
+      go114: true
+      args:
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
     - custom-test: upgrade-tests
       dot-dev: true
       args:
@@ -332,6 +350,15 @@ periodics:
       timeout: 100
       dot-dev: true
       go113: true
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - continuous: true
+      timeout: 100
+      dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
