--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -60,6 +60,10 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
+- name: ci-knative-serving-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-continuous
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
 - name: ci-knative-serving-istio-1.3-mesh
   gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.3-mesh
   alert_stale_results_hours: 3
@@ -313,6 +317,12 @@ test_groups:
 dashboards:
 - name: serving
   dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-serving-continuous
+    base_options: "sort-by-name="
+  - name: conformance
+    test_group_name: ci-knative-serving-continuous
+    base_options: "include-filter-by-regex=test/conformance/&sort-by-name="
   - name: continuous
     test_group_name: ci-knative-serving-continuous
     base_options: "sort-by-name="
