--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -110,6 +110,7 @@ presubmits:
       - "./test/e2e-tests.sh --https"
     - custom-test: build-tests-go114
       dot-dev: true
+      always_run: false
       optional: true
       go114: true
       resources:
@@ -121,6 +122,7 @@ presubmits:
         - "--build-tests"
     - custom-test: integration-tests-go114
       dot-dev: true
+      always_run: false
       optional: true
       go114: true
       args:
